@startuml

skinparam defaultFontName monospaced

'=======================================================================================================================
class AppEvent
class AppEventMgr

'=======================================================================================================================
class NativeEventListener {
    + {abstract} transformToAppEvent(NativeEvent) -> Optional<AppEvent>
==
    + ctor(NativeEventListeners)
}

'------------------------------------------------------------------------------------------------------------------------
NativeEventListener --> AppEvent : creates
NativeEventListener --> NativeEventListeners : friend for _add/_remove()

'------------------------------------------------------------------------------------------------------------------------
AppEventMgr --> NativeEventListener : Provides `NativeEvent`

'=======================================================================================================================
class NativeEventListeners {
    + forEach(func)
--
    - _add(NativeEventListener) -> ListenerId
    - _remove(ListenerId)
}

'------------------------------------------------------------------------------------------------------------------------
NativeEventListeners o-- NativeEventListener

'------------------------------------------------------------------------------------------------------------------------
AppEventMgr *-- NativeEventListeners
AppEventMgr --> NativeEventListeners : Iterates listeners

'=======================================================================================================================
@enduml
